--- a/index.html
+++ b/index.html
@@ -80,33 +80,58 @@
     <section class="services bg-light">
       <div class="container grid-3 center">
         <div>
-          <i class="fab fa-youtube fa-3x"></i>
-          <h3>YouTube</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-            reiciendis!
-          </p>
+          <i class="fab fa-adn fa-3x"></i>
+          <h4>Excellent</h4>
         </div>
         <div>
-          <i class="fas fa-chalkboard-teacher fa-3x"></i>
-          <h3>Courses</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-            reiciendis!
-          </p>
+          <i class="fas fa-bookmark fa-3x"></i>
+          <h4>We Are life Rewarding</h4>
         </div>
         <div>
-          <i class="fas fa-briefcase fa-3x"></i>
-          <h3>Freelancing Projects</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-            reiciendis!
-          </p>
+          <i class="fas fa-user-tie fa-3x"></i>
+          <h4>Dress for sucess</h4>
         </div>
       </div>
     </section>
 
     <section class="about pimg4">
+      <div class="container">
+        <div class="grid-2">
+          <div class="center">
+            <i class="fas fa-laptop-code fa-10x"></i>
+          </div>
+          <div>
+            <h3>About Us</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non eos
+              aperiam labore consectetur maiores ea magni exercitationem
+              similique laborum sed, unde, autem vel iure doloribus aliquid.
+              Aspernatur explicabo consectetur consequatur non nesciunt debitis
+              quos alias soluta, ratione, ipsa officia reiciendis.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="container grid-3 center">
+        <div>
+          <i class="fab fa-adn fa-3x"></i>
+          <h4>Excellent</h4>
+        </div>
+        <div>
+          <i class="fas fa-bookmark fa-3x"></i>
+          <h4>We Are life Rewarding</h4>
+        </div>
+        <div>
+          <i class="fas fa-user-tie fa-3x"></i>
+          <h4>Dress for sucess</h4>
+        </div>
+      </div>
+    </section>
+
+    <section class="about pimg5">
       <div class="container">
         <div class="grid-2">
           <div class="center">
