--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </p>
         </div>
         <div>
-          <i class="fas fa-chalkboard-teacher fa-3x"></i>
+          <i class="fas fa-fist-raised fa-3x"></i>
           <h3>Courses</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
@@ -122,7 +122,7 @@
           <h4>Excellent</h4>
         </div>
         <div>
-          <i class="fas fa-bookmark fa-3x"></i>
+          <i class="fas fa-fist-raised fa-3x"></i>
           <h4>We Are life Rewarding</h4>
         </div>
         <div>
