--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <!-- About -->
-    <section class="about pimg3">
+    <section class="about pimg3 parallax">
       <div class="container">
         <div class="grid-2">
           <div class="center">
@@ -95,7 +95,7 @@
       </div>
     </section>
 
-    <section class="about pimg4">
+    <section class="about pimg4 parallax">
       <div class="container">
         <div class="grid-2">
           <div class="center">
@@ -115,7 +115,7 @@
       </div>
     </section>
 
-    <section class="services">
+    <section class="services ">
       <div class="container grid-3 center">
         <div>
           <i class="fab fa-adn fa-3x"></i>
@@ -132,7 +132,7 @@
       </div>
     </section>
 
-    <section class="about pimg5">
+    <section class="about pimg5 parallax">
       <div class="container">
         <div class="grid-2">
           <div class="center">
